--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,13 @@
 
     >
 
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="50mm"
+        android:layout_height="50mm"
+
+        android:src="@drawable/sol"
+        tools:ignore="MissingConstraints" />
+
     <TextView
         android:id="@+id/resultado"
         android:layout_width="wrap_content"
