--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     >
 
 
-    <pl.droidsonroids.gif.GifImageView
+    <ImageView
         android:id="@+id/gifImageView2"
         android:layout_width="295dp"
         android:layout_height="268dp"
@@ -28,6 +28,7 @@
         android:layout_height="44dp"
         android:hint="tiempo max y min"
         android:textSize="20dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -43,6 +44,7 @@
         android:hint="temp"
         android:textAlignment="center"
         android:textSize="40dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.446"
@@ -59,6 +61,7 @@
         android:hint="localizacion"
         android:textAlignment="center"
         android:textSize="20dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.424"
@@ -73,6 +76,7 @@
         android:hint="hora"
         android:textAlignment="center"
         android:textSize="20dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.093"
@@ -88,6 +92,7 @@
         android:hint="fecha"
         android:textAlignment="center"
         android:textSize="20dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.867"
@@ -99,8 +104,9 @@
         android:id="@+id/sensacion"
         android:layout_width="309dp"
         android:layout_height="46dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginEnd="52dp"
         android:layout_marginBottom="484dp"
+        android:textColor="@color/black"
         android:hint="sensacionTermica"
         android:textAlignment="center"
         android:textSize="20dp"
@@ -112,6 +118,7 @@
         android:layout_width="195dp"
         android:layout_height="33dp"
         android:layout_marginEnd="108dp"
+        android:textColor="@color/black"
         android:layout_marginBottom="368dp"
         android:hint="condiciones"
         android:textAlignment="center"
